--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <p class="loader">Loading data, please wait...</p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
-    <script src="../src/index.js" type="module"></script>
     <!-- <script src="../src/index.js" type="module"></script> -->
+    <script src="index.js" type="module"></script>
   </body>
 </html>
 
